fix wrong colour code for red identity

--- a/userChrome.css
+++ b/userChrome.css
@@ -49,7 +49,7 @@
     --identity-color-green:     #B8E994;
     --identity-color-yellow:    #F7D794;
     --identity-color-orange:    #F19066;
-    --identity-color-red:       #FF0000;
+    --identity-color-red:       #FC5C65;
     --identity-color-pink:      #F78FB3;
     --identity-color-purple:    #786FA6;
 
